--- a/.github/build.yml
+++ b/.github/build.yml
@@ -3,7 +3,8 @@ name: Build and Release EXE
 on:
   push:
     tags:
-      - 'v*.*.*'  # 仅在推送标签时触发工作流
+      - 'v*.*.*'  # 在推送标签时触发工作流
+  workflow_dispatch:  # 添加此行以允许手动触发
 
 jobs:
   build:
@@ -16,16 +17,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  # 根据您的项目需要选择Python版本
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller tkinter
+          pip install pyinstaller
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile find_duplicates.py  # 移除了 --noconsole
+          pyinstaller --onefile find_duplicates.py
 
       - name: Create Release
         id: create_release
@@ -33,8 +34,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
 
@@ -44,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/repeat.exe  # 替换为生成的exe文件名
-          asset_name: repeat.exe  # 替换为生成的exe文件名
+          asset_path: ./dist/find_duplicates.exe
+          asset_name: find_duplicates.exe
           asset_content_type: application/octet-stream
